# mote

./: .gitignore  build.sh  context.h  ir_printer.cpp  ir_printer.h  main.cpp  mote  var.h
graphics/: box.h  build.sh  test
java/: build.xml
java/src/io/github/gkanwar/mote/: AddExpr.java  ClearButton.java  Context.java  DeepCopy.java  Expr.java  Formula.java  MulExpr.java  NoScopeExpr.java  RenderMap.java  ScopeExpr.java  Selectable.java  TaggedAtom.java  TestMain.java  TrackingBox.java  Var.java  VarExpr.java
java/src/io/github/gkanwar/mote/expr/: AddExpr.java  Expr.java  MulExpr.java  NoScopeExpr.java  ScopeExpr.java  VarExpr.java
java/src/io/github/gkanwar/mote/transform/: ReplaceTransform.java  Transform.java  TransformLog.java
prototype_v0_graphics/: test.cpp
prototype_v1_cpp/: EXAMPLES  ir.cpp  ir.h  var.cpp
prototype_v2_python/: box.py  draw.py
prototype_v2_python/atom/: __init__.py  atom.py  prodatom.py  sumatom.py  varatom.py
prototype_v3_web/: package-lock.json  package.json  snowpack.config.js  tsconfig.json
prototype_v3_web/public/: main.css
prototype_v3_web/src/: expression.ts  index.ts  render_mathml.ts  symbols.ts
prototype_v4_rsgui/: Cargo.toml
python/: alg.py  draw.py  main.py  symbol.py  util.py
python/atom/: __init__.py  atom.py  binopatom.py  indexatom.py  unopatom.py  varatom.py
web/: package-lock.json  snowpack.config.js
web/public/: index.html  main.css
web/src/: index.ts  symbols.ts
