[package]
name = "mote_prototype_v4_rsgui"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
futures-lite = "2.2"
wgpu = "0.18"
# rwh 0.5 until wgpu is updated to allow 0.6
winit = { version = "0.29", default-features = false, features = [ "rwh_05", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita" ] }
